# LifeSimulator

./: CMakeLists.txt  LifeSimulator.cpp  LifeSimulator.hpp  Pattern.hpp  PatternAcorn.hpp  PatternBlinker.hpp  PatternBlock.hpp  PatternGlider.hpp  PatternGosperGliderGun.hpp  README.md  Renderer.hpp  RendererConsole.cpp  RendererConsole.hpp  main.cpp
